[project]
name = "pytube"
version = "0.1.0"
description = "Python 3 library for downloading YouTube Videos."
readme = "README.md"
requires-python = ">=3.7"
dependencies = []
authors = [
    { name = "Ronnie Ghose", email = "hey@pytube.io" },
    { name = "Taylor Fox Dahlin", email = "hey@pytube.io" },
    { name = "Nick Ficano", email = "hey@pytube.io" },
]
keywords = ["youtube", "download", "video", "stream"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
[project.urls]
Homepage = "https://github.com/pytube/pytube"
"Bug Reports" = "https://github.com/pytube/pytube/issues"
"Read the Docs" = "https://pytube.io"

[project.scripts]
pytube = "pytube.cli:main"

# Correctly define the license section
[project.license]
file = "LICENSE" # or use text = "Your license text here"

[dependency-groups]
dev = [
    "black==19.10b0",
    "bumpversion>=0.6.0",
    "coverage>=7.6.10",
    "coveralls>=4.0.1",
    "flake8-breakpoint>=1.1.0",
    "flake8-broken-line>=1.0.0",
    "flake8-bugbear>=24.12.12",
    "flake8-builtins>=2.5.0",
    "flake8-comprehensions>=3.16.0",
    "flake8-eradicate>=1.5.0",
    "flake8-executable>=2.1.3",
    "flake8-if-expr>=1.0.4",
    "flake8-logging-format>=2024.24.12",
    "flake8-mock>=0.4",
    "flake8-mutable>=1.2.0",
    "flake8-print>=5.0.0",
    "flake8-pytest-style>=2.0.0",
    "flake8-pytest>=1.4",
    "flake8-quotes>=3.4.0",
    "flake8-return>=1.2.0",
    "flake8-strict>=0.2.1",
    "flake8-string-format>=0.3.0",
    "flake8>=7.1.1",
    "mypy>=1.14.0",
    "pep8-naming>=0.14.1",
    "pipenv-to-requirements>=0.9.0",
    "pre-commit>=4.0.1",
    "pylint>=3.3.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-profiling>=1.8.1",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
    "sphinx-rtd-theme>=3.0.2",
    "twine>=6.0.1",
]
